# BASiCS

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  old.cpp
basics/: CMakeLists.txt  basics.h  delta.h  gig.cpp  gig.h  model.h  mu.h  nu.cpp  nu.h  param.h  phi.cpp  phi.h  posterior.cpp  posterior.h  prior.h  randvar.h  s.cpp  s.h  steps-batch.cpp  theta.h
basics/random/: gig.cpp  gig.h  random.cpp  random.h
basics_core/: CMakeLists.txt  main.cpp  nu.cpp  param.h  s.h  steps-sampler.cpp
test/: CMakeLists.txt  test_nu.cpp  test_posteriors.cpp
travis/: install_armadillo.sh  install_gig.sh
